noter tilføjet